--- a/src/app/main/sidebar/sidebar-css/sidebar-css.component.html
+++ b/src/app/main/sidebar/sidebar-css/sidebar-css.component.html
@@ -24,6 +24,12 @@
     </a>
   </li>
   <li routerLinkActive="active">
+    <a role="button" routerLink="/main/css/input">
+      <i class="fa fa-circle-o"></i>
+      <span>Input</span>
+    </a>
+  </li>
+  <li routerLinkActive="active">
     <a role="button" routerLink="/main/css/modal">
       <i class="fa fa-circle-o"></i>
       <span>Modal</span>
