--- a/public/css/px-styles/sidebar.css
+++ b/public/css/px-styles/sidebar.css
@@ -1,5 +1,5 @@
 /*****************************/
-/* px-sidebar
+/* sidebar
 /****************************/
 .px-sidebar-wrapper {
     position: fixed;
