--- a/src/app/css/button/css-button.component.html
+++ b/src/app/css/button/css-button.component.html
@@ -1,6 +1,6 @@
 <section class="px-content-header">
   <h1>按钮-Button</h1>
-  <small>提供四类不同场景的按钮</small>
+  <small>提供四种不同场景的按钮</small>
 </section>
 
 <section class="px-content">
