--- a/src/app/css/input/css-input.component.html
+++ b/src/app/css/input/css-input.component.html
@@ -2,3 +2,8 @@
   <h1>输入框-Input</h1>
   <small>提供两种不同尺寸的输入框，包含内容说明，验证样式</small>
 </section>
+
+<section class="px-content">
+  <h2>场景一：标准尺寸</h2>
+  <input class="px-input lg" placeholder="placeholder">
+</section>
