--- a/src/app/css/modal/css-modal.component.html
+++ b/src/app/css/modal/css-modal.component.html
@@ -4,8 +4,8 @@
 </section>
 
 <section class="px-content">
-  <h2>场景一：提交模态框</h2>
-  <button class="btn px-btn px-btn-primary" (click)="open1()">打开操作模态框</button>
+  <h2>场景一：确认提交模态框</h2>
+  <button class="btn px-btn px-btn-primary" (click)="open1()">打开确认提交模态框</button>
   <template #modal1_template>
     <div class="px-modal-header">
       <h4>确认</h4>
@@ -28,10 +28,10 @@
   <pre class="px-pre" [ngbCollapse]="isCollapse1">
     <code class="px-code">
       //html
-      &lt;button class="btn px-btn px-btn-primary" (click)="open1()">打开操作模态框&lt;/button>
+      &lt;button class="btn px-btn px-btn-primary" (click)="open1()">打开确认提交模态框&lt;/button>
       &lt;template #modal1_template>
         &lt;div class="px-modal-header">
-          &lt;h4>模态框标题&lt;/h4>
+          &lt;h4>确认&lt;/h4>
           &lt;a role="button" (click)="modal1.close()">&lt;/a>
         &lt;/div>
         &lt;div class="px-modal-body">
@@ -63,8 +63,8 @@
     </code>
   </pre>
 
-  <h2>场景二：删除模态框</h2>
-  <button class="btn px-btn px-btn-delete" (click)="open2()">打开删除模态框</button>
+  <h2>场景二：确认删除模态框</h2>
+  <button class="btn px-btn px-btn-delete" (click)="open2()">打开确认删除模态框</button>
   <template #modal2_template>
     <div class="px-modal-header">
       <h4>删除</h4>
@@ -87,7 +87,7 @@
   <pre class="px-pre" [ngbCollapse]="isCollapse2">
     <code class="px-code">
       //html
-      &lt;button class="btn px-btn px-btn-delete" (click)="open2()">打开删除模态框&lt;/button>
+      &lt;button class="btn px-btn px-btn-delete" (click)="open2()">打开确认删除模态框&lt;/button>
       &lt;template #modal2_template>
         &lt;div class="px-modal-header">
           &lt;h4>删除&lt;/h4>
