--- a/src/app/css/modal/css-modal.component.html
+++ b/src/app/css/modal/css-modal.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class="px-modal-body">
       <div class="px-modal-confirm">
-        <img src="../../../../public/images/modal_confirm.png">
+        <img src="../../../../public/images/modal_confirm.svg">
         <h5>确认提交吗？</h5>
         <small>提交后可以查看提交数据</small>
       </div>
@@ -36,7 +36,7 @@
         &lt;/div>
         &lt;div class="px-modal-body">
           &lt;div class="px-modal-confirm">
-            &lt;img src="../../../../public/images/modal_confirm.png">
+            &lt;img src="../../../../public/images/modal_confirm.svg">
             &lt;h5>确认提交吗？&lt;/h5>
             &lt;small>提交后可以查看提交数据&lt;/small>
           &lt;/div>
@@ -72,7 +72,7 @@
     </div>
     <div class="px-modal-body">
       <div class="px-modal-confirm">
-        <img src="../../../../public/images/modal_confirm.png">
+        <img src="../../../../public/images/modal_confirm.svg">
         <h5>确认删除数据吗？</h5>
         <small>删除后数据将丢失，不可恢复</small>
       </div>
@@ -95,7 +95,7 @@
         &lt;/div>
         &lt;div class="px-modal-body">
           &lt;div class="px-modal-confirm">
-            &lt;img src="../../../../public/images/modal_confirm.png">
+            &lt;img src="../../../../public/images/modal_confirm.svg">
             &lt;h5>确认删除数据吗？&lt;/h5>
             &lt;small>删除后数据将丢失，不可恢复&lt;/small>
           &lt;/div>
