--- a/public/css/px-styles/input.css
+++ b/public/css/px-styles/input.css
@@ -18,6 +18,10 @@ textarea:-moz-placeholder {
     color: #4d5761;
 }
 
+.px-input.ng-invalid {
+    border: 1px solid #ff5b55;
+}
+
 .px-input.lg {
     width: 400px;
 }
@@ -32,4 +36,19 @@ textarea:-moz-placeholder {
 
 .px-input:disabled {
     background-color: #f2f2f2;
+}
+
+.px-input-wrapper {
+    margin-bottom: 14px;
+}
+
+.px-input-wrapper span {
+    display: block;
+    padding: 5px 0 0 10px;
+    font-size: 12px;
+    color: #7c868d;
+}
+
+.px-input-wrapper span.validation {
+    color: #ff5d55;
 }
