--- a/src/app/css/input/css-input.component.html
+++ b/src/app/css/input/css-input.component.html
@@ -63,4 +63,10 @@
       inputValue:string;
     </code>
   </pre>
+
+  <h2>场景五：带有单位或图标的</h2>
+  <div class="px-input-wrapper">
+    <input class="px-input lg addon" placeholder="带有单位或图标的" type="number">
+    <span class="addon">GB</span>
+  </div>
 </section>
