--- a/src/app/css/input/css-input.component.html
+++ b/src/app/css/input/css-input.component.html
@@ -66,7 +66,11 @@
 
   <h2>场景五：带有单位或图标的</h2>
   <div class="px-input-wrapper">
-    <input class="px-input lg addon" placeholder="带有单位或图标的" type="number">
+    <input class="px-input lg addon" placeholder="带有单位或图标的">
+    <span class="addon">GB</span>
+  </div>
+  <div class="px-input-wrapper">
+    <input class="px-input sm addon" placeholder="带有单位或图标的">
     <span class="addon">GB</span>
   </div>
 </section>
