--- a/src/app/css/input/css-input.component.html
+++ b/src/app/css/input/css-input.component.html
@@ -87,4 +87,10 @@
       &lt;/div>
     </code>
   </pre>
+
+  <h2>场景六：From To</h2>
+  <div class="px-input-wrapper">
+    <input class="px-input sm" placeholder="From">
+    <input class="px-input sm" placeholder="To">
+  </div>
 </section>
