--- a/src/app/css/input/css-input.component.html
+++ b/src/app/css/input/css-input.component.html
@@ -91,6 +91,7 @@
   <h2>场景六：From To</h2>
   <div class="px-input-wrapper">
     <input class="px-input sm" placeholder="From">
+    <i class="link">-</i>
     <input class="px-input sm" placeholder="To">
   </div>
 </section>
