--- a/public/css/px-styles/sidebar.css
+++ b/public/css/px-styles/sidebar.css
@@ -13,7 +13,7 @@
 
 .px-sidebar {
     position: relative;
-    background-color: #f3f3f3;
+    background-color: #f7f8f9;
     width: 217px;
     height: 100%;
     padding-bottom: 10px;
@@ -35,11 +35,11 @@
 
 .px-sidebar-menu li a {
     position: relative;
-    padding: 12px 5px 12px 20px;
+    padding: 18px 5px 18px 20px;
     display: block;
-    color: #444;
-    font-weight: 400;
-    border-left: 3px solid transparent;
+    color: #4d5761;
+    font-weight: normal;
+    border-left: 4px solid transparent;
     font-size: 14px;
 }
 
@@ -47,12 +47,15 @@
     width: 20px;
 }
 
-.px-sidebar-menu li:hover a,
+.px-sidebar-menu li:hover a {
+    background: #eef0f5;
+}
+
 .px-sidebar-menu li.active a {
-    color: #000;
-    border-left-color: #0275d8;
-    background: #f4f4f5;
-    font-weight: 400;
+    color: #00abff;
+    border-left-color: #00abff;
+    background: #fff;
+    font-weight: normal;
 }
 
 .px-sidebar-collapsed {
