--- a/public/css/px-styles/global.css
+++ b/public/css/px-styles/global.css
@@ -36,4 +36,5 @@ textarea::-webkit-input-placeholder,
 input:-moz-placeholder,
 textarea:-moz-placeholder {
     color: #c2c6c9;
+    font-size: 14px;
 }
