--- a/src/app/css/select/css-select.component.html
+++ b/src/app/css/select/css-select.component.html
@@ -8,9 +8,9 @@
   <div ngbDropdown class="px-select">
     <input ngbDropdownToggle [(ngModel)]="inputSelect" #input="ngModel" readonly placeholder="请选择">
     <div class="dropdown-menu">
-      <button class="btn px-btn px-btn-default" (click)="inputSelect = '选项1'">选项1</button>
-      <button class="btn px-btn px-btn-default">选项2</button>
-      <button class="btn px-btn px-btn-default">选项3</button>
+      <button (click)="inputSelect = '选项1'">选项1</button>
+      <button (click)="inputSelect = '选项2'">选项2</button>
+      <button (click)="inputSelect = '选项3'">选项3</button>
     </div>
   </div>
 </section>
