--- a/src/app/css/select/css-select.component.html
+++ b/src/app/css/select/css-select.component.html
@@ -6,11 +6,41 @@
 <section class="px-content">
   <h2>场景一：不带输入模式</h2>
   <div ngbDropdown class="px-select">
-    <input ngbDropdownToggle [(ngModel)]="inputSelect" #input="ngModel" readonly placeholder="请选择">
+    <input ngbDropdownToggle [(ngModel)]="inputSelect1" readonly placeholder="请选择">
     <div class="dropdown-menu">
-      <button (click)="inputSelect = '选项1'">选项1</button>
-      <button (click)="inputSelect = '选项2'">选项2</button>
-      <button (click)="inputSelect = '选项3'">选项3</button>
+      <button (click)="inputSelect1 = '选项1'">选项1</button>
+      <button (click)="inputSelect1 = '选项2'">选项2</button>
+      <button (click)="inputSelect1 = '选项3'">选项3</button>
     </div>
   </div>
+  <div ngbDropdown class="px-select">
+    <input ngbDropdownToggle [(ngModel)]="inputSelect2" readonly placeholder="请选择" disabled>
+    <div class="dropdown-menu">
+      <button (click)="inputSelect2 = '选项1'">选项1</button>
+      <button (click)="inputSelect2 = '选项2'">选项2</button>
+      <button (click)="inputSelect2 = '选项3'">选项3</button>
+    </div>
+  </div>
+  <div class="h-20"></div>
+  <p><a role="button" class="a-btn-code-example" (click)="isCollapse1 = !isCollapse1">代码示例 <i class="fa fa-plus"></i></a></p>
+  <pre class="px-pre" [ngbCollapse]="isCollapse1">
+    <code class="px-code">
+      &lt;div ngbDropdown class="px-select">
+        &lt;input ngbDropdownToggle [(ngModel)]="inputSelect1" readonly placeholder="请选择">
+        &lt;div class="dropdown-menu">
+          &lt;button (click)="inputSelect1 = '选项1'">选项1&lt;/button>
+          &lt;button (click)="inputSelect1 = '选项2'">选项2&lt;/button>
+          &lt;button (click)="inputSelect1 = '选项3'">选项3&lt;/button>
+        &lt;/div>
+      &lt;/div>
+      &lt;div ngbDropdown class="px-select">
+        &lt;input ngbDropdownToggle [(ngModel)]="inputSelect2" readonly placeholder="请选择" disabled>
+        &lt;div class="dropdown-menu">
+          &lt;button (click)="inputSelect2 = '选项1'">选项1&lt;/button>
+          &lt;button (click)="inputSelect2 = '选项2'">选项2&lt;/button>
+          &lt;button (click)="inputSelect2 = '选项3'">选项3&lt;/button>
+        &lt;/div>
+      &lt;/div>
+    </code>
+  </pre>
 </section>
