--- a/public/css/px-styles/select.css
+++ b/public/css/px-styles/select.css
@@ -21,6 +21,11 @@
     border-bottom-right-radius: 0;
 }
 
+.px-select input:disabled {
+    background-color: #f2f2f2;
+    cursor: not-allowed;
+}
+
 .px-select .dropdown-menu {
     margin: 0;
     border: 1px solid #ddd;
