--- a/public/css/px-styles/select.css
+++ b/public/css/px-styles/select.css
@@ -59,3 +59,12 @@
     color: #fff;
     background: #3fb3ff;
 }
+
+.px-select.addon input {
+    width: 360px;
+}
+
+.px-select.addon a.addon:after {
+    font-size: 12px;
+    color: #c2c6c9;
+}
