--- a/public/css/px-styles/button.css
+++ b/public/css/px-styles/button.css
@@ -156,6 +156,7 @@
 
 .px-btn-operate-more-dropdown-toggle:after {
     margin-left: -3px;
+    color: #7c868d;
 }
 
 .px-btn-operate-more-dropdown-menu button {
