--- a/src/app/css/select/css-select.component.html
+++ b/src/app/css/select/css-select.component.html
@@ -7,6 +7,7 @@
   <h2>场景一：不带输入模式</h2>
   <div ngbDropdown class="px-select">
     <input ngbDropdownToggle [(ngModel)]="inputSelect1" readonly placeholder="请选择">
+    <i class="fa fa-caret-down"></i>
     <div class="dropdown-menu">
       <button (click)="inputSelect1 = '选项1'">选项1</button>
       <button (click)="inputSelect1 = '选项2'">选项2</button>
@@ -15,6 +16,7 @@
   </div>
   <div ngbDropdown class="px-select">
     <input ngbDropdownToggle [(ngModel)]="inputSelect2" readonly placeholder="请选择" disabled>
+    <i class="fa fa-caret-down"></i>
     <div class="dropdown-menu">
       <button (click)="inputSelect2 = '选项1'">选项1</button>
       <button (click)="inputSelect2 = '选项2'">选项2</button>
@@ -27,6 +29,7 @@
     <code class="px-code">
       &lt;div ngbDropdown class="px-select">
         &lt;input ngbDropdownToggle [(ngModel)]="inputSelect1" readonly placeholder="请选择">
+        &lt;i class="fa fa-caret-down"></i>
         &lt;div class="dropdown-menu">
           &lt;button (click)="inputSelect1 = '选项1'">选项1&lt;/button>
           &lt;button (click)="inputSelect1 = '选项2'">选项2&lt;/button>
@@ -35,6 +38,7 @@
       &lt;/div>
       &lt;div ngbDropdown class="px-select">
         &lt;input ngbDropdownToggle [(ngModel)]="inputSelect2" readonly placeholder="请选择" disabled>
+        &lt;i class="fa fa-caret-down"></i>
         &lt;div class="dropdown-menu">
           &lt;button (click)="inputSelect2 = '选项1'">选项1&lt;/button>
           &lt;button (click)="inputSelect2 = '选项2'">选项2&lt;/button>
