--- a/public/css/px-styles/select.css
+++ b/public/css/px-styles/select.css
@@ -16,6 +16,14 @@
     width: 400px;
 }
 
+.px-select i.fa-caret-down {
+    font-size: 12px;
+    color: #c2c6c9;
+    position: absolute;
+    left: 380px;
+    top: 12px;
+}
+
 .px-select input:focus {
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
