--- a/src/app/css/select/css-select.component.html
+++ b/src/app/css/select/css-select.component.html
@@ -29,7 +29,7 @@
     <code class="px-code">
       &lt;div ngbDropdown class="px-select">
         &lt;input ngbDropdownToggle [(ngModel)]="inputSelect1" readonly placeholder="请选择">
-        &lt;i class="fa fa-caret-down"></i>
+        &lt;i class="fa fa-caret-down">&lt;/i>
         &lt;div class="dropdown-menu">
           &lt;button (click)="inputSelect1 = '选项1'">选项1&lt;/button>
           &lt;button (click)="inputSelect1 = '选项2'">选项2&lt;/button>
@@ -38,7 +38,7 @@
       &lt;/div>
       &lt;div ngbDropdown class="px-select">
         &lt;input ngbDropdownToggle [(ngModel)]="inputSelect2" readonly placeholder="请选择" disabled>
-        &lt;i class="fa fa-caret-down"></i>
+        &lt;i class="fa fa-caret-down">&lt;/i>
         &lt;div class="dropdown-menu">
           &lt;button (click)="inputSelect2 = '选项1'">选项1&lt;/button>
           &lt;button (click)="inputSelect2 = '选项2'">选项2&lt;/button>
