--- a/src/app/css/checkbox/css-checkbox.component.html
+++ b/src/app/css/checkbox/css-checkbox.component.html
@@ -2,3 +2,11 @@
   <h1>复选框-Checkbox</h1>
   <small>可以同时选择多个</small>
 </section>
+
+<section class="px-content">
+  <div class="h-20"></div>
+  <div class="px-checkbox-wrapper">
+    <input type="checkbox" class="px-checkbox">
+    <span>选项一</span>
+  </div>
+</section>
