--- a/src/app/css/checkbox/css-checkbox.component.html
+++ b/src/app/css/checkbox/css-checkbox.component.html
@@ -5,8 +5,8 @@
 
 <section class="px-content">
   <div class="h-20"></div>
-  <div class="px-checkbox-wrapper">
+  <label class="px-checkbox-wrapper">
     <input type="checkbox" class="px-checkbox">
     <span>选项一</span>
-  </div>
+  </label>
 </section>
