--- a/src/app/css/checkbox/css-checkbox.component.html
+++ b/src/app/css/checkbox/css-checkbox.component.html
@@ -5,8 +5,18 @@
 
 <section class="px-content">
   <div class="h-20"></div>
-  <label class="px-checkbox-wrapper">
-    <input type="checkbox" class="px-checkbox">
-    <span>选项一</span>
-  </label>
+  <div class="px-checkbox-group">
+    <label class="px-checkbox-wrapper">
+      <input type="checkbox" class="px-checkbox">
+      <span>选项一</span>
+    </label>
+    <label class="px-checkbox-wrapper">
+      <input type="checkbox" class="px-checkbox">
+      <span>选项二</span>
+    </label>
+    <label class="px-checkbox-wrapper">
+      <input type="checkbox" class="px-checkbox">
+      <span>选项三</span>
+    </label>
+  </div>
 </section>
