--- a/src/app/css/checkbox/css-checkbox.component.html
+++ b/src/app/css/checkbox/css-checkbox.component.html
@@ -11,11 +11,11 @@
       <span>选项一</span>
     </label>
     <label class="px-checkbox-wrapper">
-      <input type="checkbox" class="px-checkbox">
+      <input type="checkbox" class="px-checkbox" checked>
       <span>选项二</span>
     </label>
     <label class="px-checkbox-wrapper">
-      <input type="checkbox" class="px-checkbox">
+      <input type="checkbox" class="px-checkbox" disabled>
       <span>选项三</span>
     </label>
   </div>
