--- a/public/css/px-styles/checkbox.css
+++ b/public/css/px-styles/checkbox.css
@@ -4,8 +4,8 @@
 .px-checkbox {
     -webkit-appearance: none;
     background-size: 16px 16px;
-    background-color: #ffffff;
-    border: 1px solid #dddddd;
+    background-color: #fff;
+    border: 1px solid #ddd;
     margin-right: 0;
     height: 16px;
     width: 16px;
@@ -44,4 +44,18 @@
 
 .px-checkbox-group .px-checkbox-wrapper:not(:first-child){
     margin-left: 20px;
+}
+
+.px-checkbox:disabled,
+.px-checkbox:disabled:hover {
+    background-color: #f2f2f2;
+    background-image: none;
+    border: 1px solid #ddd;
+    outline: none;
+    cursor: not-allowed;
+}
+
+.px-checkbox:disabled + span {
+    color: #c2c6c9;
+    cursor: not-allowed;
 }
