--- a/src/app/css/checkbox/css-checkbox.component.html
+++ b/src/app/css/checkbox/css-checkbox.component.html
@@ -18,5 +18,9 @@
       <input type="checkbox" class="px-checkbox" disabled>
       <span>选项三</span>
     </label>
+    <label class="px-checkbox-wrapper">
+      <input type="checkbox" class="px-checkbox" checked disabled>
+      <span>选项四</span>
+    </label>
   </div>
 </section>
