--- a/public/css/px-styles/radio.css
+++ b/public/css/px-styles/radio.css
@@ -1,3 +1,30 @@
 /*****************************/
 /* radio
 /****************************/
+.px-radio {
+    display: none;
+}
+
+.px-radio-wrapper {
+    margin-bottom: 20px;
+}
+
+.px-radio-wrapper span {
+    font-size: 14px;
+    color: #7c868d;
+    cursor: pointer;
+    padding-left: 22px;
+    background: url("../../images/icon_radio_disabled.png") no-repeat left;
+}
+
+.px-radio-group .px-radio-wrapper:not(:first-child){
+    margin-left: 20px;
+}
+
+.px-radio-wrapper span:hover {
+    background: url("../../images/icon_radio_normal.png") no-repeat left;
+}
+
+.px-radio:checked + span {
+    background: url("../../images/icon_radio_selected.png") no-repeat left;
+}
