--- a/src/app/css/radio/css-radio.component.html
+++ b/src/app/css/radio/css-radio.component.html
@@ -2,3 +2,26 @@
   <h1>单选框-Radio</h1>
   <small>只有一项能被选择</small>
 </section>
+
+<section class="px-content">
+  <div class="h-20"></div>
+  <div class="px-radio-group">
+    <label class="px-radio-wrapper">
+      <input type="radio" class="px-radio">
+      <span>选项一</span>
+    </label>
+    <label class="px-radio-wrapper">
+      <input type="radio" class="px-radio">
+      <span>选项二</span>
+    </label>
+    <label class="px-radio-wrapper">
+      <input type="radio" class="px-radio">
+      <span>选项三</span>
+    </label>
+    <label class="px-radio-wrapper">
+      <input type="radio" class="px-radio">
+      <span>选项四</span>
+    </label>
+  </div>
+
+</section>
