--- a/src/app/css/radio/css-radio.component.html
+++ b/src/app/css/radio/css-radio.component.html
@@ -7,19 +7,19 @@
   <div class="h-20"></div>
   <div class="px-radio-group">
     <label class="px-radio-wrapper">
-      <input type="radio" class="px-radio">
+      <input type="radio" class="px-radio" name="1">
       <span>选项一</span>
     </label>
     <label class="px-radio-wrapper">
-      <input type="radio" class="px-radio">
+      <input type="radio" class="px-radio" name="1">
       <span>选项二</span>
     </label>
     <label class="px-radio-wrapper">
-      <input type="radio" class="px-radio">
+      <input type="radio" class="px-radio" name="1">
       <span>选项三</span>
     </label>
     <label class="px-radio-wrapper">
-      <input type="radio" class="px-radio">
+      <input type="radio" class="px-radio" name="1">
       <span>选项四</span>
     </label>
   </div>
