--- a/src/app/css/radio/css-radio.component.html
+++ b/src/app/css/radio/css-radio.component.html
@@ -15,11 +15,11 @@
       <span>选项二</span>
     </label>
     <label class="px-radio-wrapper">
-      <input type="radio" class="px-radio" name="1">
+      <input type="radio" class="px-radio" name="2" disabled>
       <span>选项三</span>
     </label>
     <label class="px-radio-wrapper">
-      <input type="radio" class="px-radio" name="1">
+      <input type="radio" class="px-radio" name="3" checked disabled>
       <span>选项四</span>
     </label>
   </div>
