--- a/src/app/css/radio/css-radio.component.html
+++ b/src/app/css/radio/css-radio.component.html
@@ -23,5 +23,29 @@
       <span>选项四</span>
     </label>
   </div>
+  <div class="h-20"></div>
+  <p><a role="button" class="a-btn-code-example" (click)="isCollapse1 = !isCollapse1">代码示例 <i class="fa fa-plus"></i></a></p>
+  <pre class="px-pre" [ngbCollapse]="isCollapse1">
+    <code class="px-code">
+      &lt;div class="px-radio-group">
+        &lt;label class="px-radio-wrapper">
+          &lt;input type="radio" class="px-radio" name="1">
+          &lt;span>选项一&lt;/span>
+        &lt;/label>
+        &lt;label class="px-radio-wrapper">
+          &lt;input type="radio" class="px-radio" name="1">
+          &lt;span>选项二&lt;/span>
+        &lt;/label>
+        &lt;label class="px-radio-wrapper">
+          &lt;input type="radio" class="px-radio" name="2" disabled>
+          &lt;span>选项三&lt;/span>
+        &lt;/label>
+        &lt;label class="px-radio-wrapper">
+          &lt;input type="radio" class="px-radio" name="3" checked disabled>
+          &lt;span>选项四&lt;/span>
+        &lt;/label>
+      &lt;/div>
+    </code>
+  </pre>
 
 </section>
