--- a/src/app/main/sidebar/sidebar-css/sidebar-css.component.html
+++ b/src/app/main/sidebar/sidebar-css/sidebar-css.component.html
@@ -42,6 +42,12 @@
     </a>
   </li>
   <li routerLinkActive="active">
+    <a role="button" routerLink="/main/css/progress">
+      <i class="fa fa-circle-o"></i>
+      <span>Progress</span>
+    </a>
+  </li>
+  <li routerLinkActive="active">
     <a role="button" routerLink="/main/css/radio">
       <i class="fa fa-circle-o"></i>
       <span>Radio</span>
