--- a/public/css/px-styles/button.css
+++ b/public/css/px-styles/button.css
@@ -10,6 +10,17 @@
     line-height: 1;
     border-radius: 4px;
     outline: none;
+    display: inline-block;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    touch-action: manipulation;
+    cursor: pointer;
+    user-select: none;
+    border: 1px solid transparent;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
 
 .px-btn i {
