--- a/src/app/css/button/css-button.component.html
+++ b/src/app/css/button/css-button.component.html
@@ -6,23 +6,23 @@
 <section class="px-content">
   <h2>场景一：标题旁的按钮</h2>
   <p>单个操作</p>
-  <button class="btn px-btn px-btn-default">单个操作</button>
-  <button class="btn px-btn px-btn-default" disabled>单个操作</button>
+  <button class="px-btn px-btn-default">单个操作</button>
+  <button class="px-btn px-btn-default" disabled>单个操作</button>
   <div class="h-20"></div>
   <p><a role="button" class="a-btn-code-example" (click)="isCollapse1 = !isCollapse1">代码示例 <i class="fa fa-plus"></i></a></p>
   <pre class="px-pre" [ngbCollapse]="isCollapse1">
     <code class="px-code">
-      &lt;button class="btn px-btn px-btn-default">单个操作&lt;/button>
-      &lt;button class="btn px-btn px-btn-default" disabled>单个操作&lt;/button>
+      &lt;button class="px-btn px-btn-default">单个操作&lt;/button>
+      &lt;button class="px-btn px-btn-default" disabled>单个操作&lt;/button>
     </code>
   </pre>
   <p>多个操作</p>
   <div ngbDropdown>
-    <button class="btn px-btn px-btn-default px-btn-default-more" ngbDropdownToggle>更多操作</button>
+    <button class="px-btn px-btn-default px-btn-default-more" ngbDropdownToggle>更多操作</button>
     <div class="px-btn-default-more-dropdown-menu dropdown-menu">
-      <button class="btn px-btn px-btn-default">操作1</button>
-      <button class="btn px-btn px-btn-default">操作2</button>
-      <button class="btn px-btn px-btn-default">操作3</button>
+      <button class="px-btn px-btn-default">操作1</button>
+      <button class="px-btn px-btn-default">操作2</button>
+      <button class="px-btn px-btn-default">操作3</button>
     </div>
   </div>
   <div class="h-20"></div>
@@ -30,46 +30,46 @@
   <pre class="px-pre" [ngbCollapse]="isCollapse2">
     <code class="px-code">
       &lt;div ngbDropdown>
-        &lt;button class="btn px-btn px-btn-default px-btn-default-more" ngbDropdownToggle>更多操作&lt;/button>
+        &lt;button class="px-btn px-btn-default px-btn-default-more" ngbDropdownToggle>更多操作&lt;/button>
         &lt;div class="px-btn-default-more-dropdown-menu dropdown-menu">
-          &lt;button class="btn px-btn px-btn-default">操作1&lt;/button>
-          &lt;button class="btn px-btn px-btn-default">操作2&lt;/button>
-          &lt;button class="btn px-btn px-btn-default">操作3&lt;/button>
+          &lt;button class="px-btn px-btn-default">操作1&lt;/button>
+          &lt;button class="px-btn px-btn-default">操作2&lt;/button>
+          &lt;button class="px-btn px-btn-default">操作3&lt;/button>
         &lt;/div>
       &lt;/div>
     </code>
   </pre>
   <h2>场景二：常用按钮</h2>
-  <button class="btn px-btn px-btn-success">常用按钮</button>
-  <button class="btn px-btn px-btn-success create">创建按钮</button>
+  <button class="px-btn px-btn-success">常用按钮</button>
+  <button class="px-btn px-btn-success create">创建按钮</button>
   <div class="h-20"></div>
   <p><a role="button" class="a-btn-code-example" (click)="isCollapse3 = !isCollapse3">代码示例 <i class="fa fa-plus"></i></a></p>
   <pre class="px-pre" [ngbCollapse]="isCollapse3">
     <code class="px-code">
-      &lt;button class="btn px-btn px-btn-success">常用按钮&lt;/button>
-      &lt;button class="btn px-btn px-btn-success create">创建按钮&lt;/button>
+      &lt;button class="px-btn px-btn-success">常用按钮&lt;/button>
+      &lt;button class="px-btn px-btn-success create">创建按钮&lt;/button>
     </code>
   </pre>
   <h2>场景三：表格按钮</h2>
   <p>单个操作</p>
-  <button class="btn px-btn px-btn-operate">编辑</button>
-  <button class="btn px-btn px-btn-operate" disabled>编辑</button>
+  <button class="px-btn px-btn-operate">编辑</button>
+  <button class="px-btn px-btn-operate" disabled>编辑</button>
   <div class="h-20"></div>
   <p><a role="button" class="a-btn-code-example" (click)="isCollapse4 = !isCollapse4">代码示例 <i class="fa fa-plus"></i></a></p>
   <pre class="px-pre" [ngbCollapse]="isCollapse4">
     <code class="px-code">
-      &lt;button class="btn px-btn px-btn-operate">编辑&lt;/button>
-      &lt;button class="btn px-btn px-btn-operate" disabled>编辑&lt;/button>
+      &lt;button class="px-btn px-btn-operate">编辑&lt;/button>
+      &lt;button class="px-btn px-btn-operate" disabled>编辑&lt;/button>
     </code>
   </pre>
   <p>多个操作</p>
   <div ngbDropdown>
-    <button class="btn px-btn px-btn-operate px-btn-operate-more">编辑</button>
-    <button class="btn px-btn px-btn-operate-more-dropdown-toggle" ngbDropdownToggle></button>
+    <button class="px-btn px-btn-operate px-btn-operate-more">编辑</button>
+    <button class="px-btn px-btn-operate-more-dropdown-toggle" ngbDropdownToggle></button>
     <div class="px-btn-operate-more-dropdown-menu dropdown-menu">
-      <button class="btn px-btn px-btn-operate">下载</button>
-      <button class="btn px-btn px-btn-operate">删除</button>
-      <button class="btn px-btn px-btn-operate">其他</button>
+      <button class="px-btn px-btn-operate">下载</button>
+      <button class="px-btn px-btn-operate">删除</button>
+      <button class="px-btn px-btn-operate">其他</button>
     </div>
   </div>
   <div class="h-20"></div>
@@ -77,45 +77,45 @@
   <pre class="px-pre" [ngbCollapse]="isCollapse5">
     <code class="px-code">
       &lt;div ngbDropdown>
-        &lt;button class="btn px-btn px-btn-operate px-btn-operate-more">编辑&lt;/button>
-        &lt;button class="btn px-btn px-btn-operate-more-dropdown-toggle" ngbDropdownToggle>&lt;/button>
+        &lt;button class="px-btn px-btn-operate px-btn-operate-more">编辑&lt;/button>
+        &lt;button class="px-btn px-btn-operate-more-dropdown-toggle" ngbDropdownToggle>&lt;/button>
         &lt;div class="px-btn-operate-more-dropdown-menu dropdown-menu">
-          &lt;button class="btn px-btn px-btn-operate">下载&lt;/button>
-          &lt;button class="btn px-btn px-btn-operate">删除&lt;/button>
-          &lt;button class="btn px-btn px-btn-operate">其他&lt;/button>
+          &lt;button class="px-btn px-btn-operate">下载&lt;/button>
+          &lt;button class="px-btn px-btn-operate">删除&lt;/button>
+          &lt;button class="px-btn px-btn-operate">其他&lt;/button>
         &lt;/div>
       &lt;/div>
     </code>
   </pre>
   <h2>场景四：组合按钮</h2>
   <p>确认取消按钮</p>
-  <button class="btn px-btn px-btn-primary">确认</button>
-  <button class="btn px-btn px-btn-cancel">取消</button>
-  <button class="btn px-btn px-btn-primary" disabled>确认</button>
-  <button class="btn px-btn px-btn-cancel" disabled>取消</button>
+  <button class="px-btn px-btn-primary">确认</button>
+  <button class="px-btn px-btn-cancel">取消</button>
+  <button class="px-btn px-btn-primary" disabled>确认</button>
+  <button class="px-btn px-btn-cancel" disabled>取消</button>
   <div class="h-20"></div>
   <p><a role="button" class="a-btn-code-example" (click)="isCollapse6 = !isCollapse6">代码示例 <i class="fa fa-plus"></i></a></p>
   <pre class="px-pre" [ngbCollapse]="isCollapse6">
     <code class="px-code">
-      &lt;button class="btn px-btn px-btn-primary">确认&lt;/button>
-      &lt;button class="btn px-btn px-btn-cancel">取消&lt;/button>
-      &lt;button class="btn px-btn px-btn-primary" disabled>确认&lt;/button>
-      &lt;button class="btn px-btn px-btn-cancel" disabled>取消&lt;/button>
+      &lt;button class="px-btn px-btn-primary">确认&lt;/button>
+      &lt;button class="px-btn px-btn-cancel">取消&lt;/button>
+      &lt;button class="px-btn px-btn-primary" disabled>确认&lt;/button>
+      &lt;button class="px-btn px-btn-cancel" disabled>取消&lt;/button>
     </code>
   </pre>
   <p>删除取消按钮</p>
-  <button class="btn px-btn px-btn-delete">删除</button>
-  <button class="btn px-btn px-btn-cancel">取消</button>
-  <button class="btn px-btn px-btn-delete" disabled>删除</button>
-  <button class="btn px-btn px-btn-cancel" disabled>取消</button>
+  <button class="px-btn px-btn-delete">删除</button>
+  <button class="px-btn px-btn-cancel">取消</button>
+  <button class="px-btn px-btn-delete" disabled>删除</button>
+  <button class="px-btn px-btn-cancel" disabled>取消</button>
   <div class="h-20"></div>
   <p><a role="button" class="a-btn-code-example" (click)="isCollapse7 = !isCollapse7">代码示例 <i class="fa fa-plus"></i></a></p>
   <pre class="px-pre" [ngbCollapse]="isCollapse7">
     <code class="px-code">
-      &lt;button class="btn px-btn px-btn-delete">删除&lt;/button>
-      &lt;button class="btn px-btn px-btn-cancel">取消&lt;/button>
-      &lt;button class="btn px-btn px-btn-delete" disabled>删除&lt;/button>
-      &lt;button class="btn px-btn px-btn-cancel" disabled>取消&lt;/button>
+      &lt;button class="px-btn px-btn-delete">删除&lt;/button>
+      &lt;button class="px-btn px-btn-cancel">取消&lt;/button>
+      &lt;button class="px-btn px-btn-delete" disabled>删除&lt;/button>
+      &lt;button class="px-btn px-btn-cancel" disabled>取消&lt;/button>
     </code>
   </pre>
 </section>
