--- a/src/app/css/progress/css-progress.component.html
+++ b/src/app/css/progress/css-progress.component.html
@@ -2,3 +2,8 @@
   <h1>进度条-Progress</h1>
   <small>提供两种不同的场景</small>
 </section>
+
+<section class="px-content">
+  <h2>场景一：普通的</h2>
+  <progress class="px-progress px-progress-primary" value="25" max="100"></progress>
+</section>
